# PracticeKnowing

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: User.xml  test_css.html
app/src/main/cpp/c_caculate/: c_function.c  c_plus_struct.cpp  c_struct.c  common.h  java_byte_jni.c  jni_thread.c  jni_thread2.c  jni_thread3.c  native_exception.c
app/src/main/cpp/caculate/: Caculate.cpp  com_desaco_practiceknowing_native_method_Caculate.h
app/src/main/cpp/decrypt_encrypt/: NativeEncryptDecode.cpp  com_desaco_practiceknowing_native_method_NativeEncryptDecode.h  encode_decode.c
app/src/main/cpp/jni_attr/: c_call_java.c  c_struct.c  com_desaco_practiceknowing_native_method_CcallJava.h  com_desaco_practiceknowing_native_method_JniInvokeJava.h  com_desaco_practiceknowing_native_method_JniScanSdcard.h  cplusplus_invoke_java.cpp  jni_invoke_java.c  jni_scan_sd.c
app/src/main/cpp/utils/: common_utils.cpp  string_jstring.h
app/src/main/java/com/desaco/practiceknowing/: CcallJavaActivity.java  MainActivity.java  PracticeApplication.java
app/src/main/java/com/desaco/practiceknowing/activity/: CcallJavaActivity.java  HandlerActivity.java  ObserverScrollViewActivity.java  TestActivity.java
app/src/main/java/com/desaco/practiceknowing/adapter/: PgcHeadFootAdapter.java
app/src/main/java/com/desaco/practiceknowing/animation/: MatrixAnimatorActivity.java  SimpleCustomAnimation.java
app/src/main/java/com/desaco/practiceknowing/audio_video_api/: MediaPlayerMediaControlActivity.java  VideoViewMediaControlActivity.java
app/src/main/java/com/desaco/practiceknowing/banner/: HeaderFooterAdapter.java  MyAdapter.java  OnRecyclerViewScrollListener.java  RecyclerViewWithHeaderFootActivity.java
app/src/main/java/com/desaco/practiceknowing/base/: BaseFragment.java
app/src/main/java/com/desaco/practiceknowing/bean/: Group.java  User.java  Weibo.java
app/src/main/java/com/desaco/practiceknowing/black_technology/: Test.java
app/src/main/java/com/desaco/practiceknowing/broadcastReceiver/: MyBroadcastReceiver.java
app/src/main/java/com/desaco/practiceknowing/camera_ablum/: MainCameraAblumActivity.java
app/src/main/java/com/desaco/practiceknowing/connect_eventbus/: MessageEvent.java
app/src/main/java/com/desaco/practiceknowing/connect_rx/: MessageEvent.java
app/src/main/java/com/desaco/practiceknowing/data_parse/: DataParseActivity.java  Person.java  User.java
app/src/main/java/com/desaco/practiceknowing/fragment/: TestTreadPoolViewPagerActivity.java  VideoSubFragment1.java  VideoSubFragment2.java  VideoSubFragment3.java
app/src/main/java/com/desaco/practiceknowing/java_android_classloader/: AndroidClassLoader.java  JavaClassLoader.java
app/src/main/java/com/desaco/practiceknowing/keystore/: AllowX509TrustManager.java
app/src/main/java/com/desaco/practiceknowing/myInterface/: OnBottomListener.java
app/src/main/java/com/desaco/practiceknowing/native_method/: Caculate.java  CcallJava.java  CcallJava_CplusplusCallActivity.java  JniInvokeJava.java  JniScanSdcard.java  JniThreadActivity.java  NativeEncryptDecode.java  Track_Info.java
app/src/main/java/com/desaco/practiceknowing/notification/: PendingNotification.java
app/src/main/java/com/desaco/practiceknowing/object_reference/: ObjectReference.java
app/src/main/java/com/desaco/practiceknowing/receiver/: AlarmReceiver.java
app/src/main/java/com/desaco/practiceknowing/service/: MyService.java  ScheduledService.java  SubIntentService.java  SubService.java
app/src/main/res/layout/: activity_banner_main.xml  activity_c_call_java.xml  activity_camera_ablum_main.xml  activity_custom_button.xml  activity_custom_viewgroup_event.xml  activity_data_parse.xml  activity_eventbus_manyevents.xml  activity_four_tab.xml  activity_fragment_layout.xml  activity_hooker_main.xml  activity_hooker_main2.xml  activity_jni_thread.xml  activity_layout.xml  activity_main.xml  activity_matrix_animator.xml  activity_media_recorder_audio.xml  activity_onactivityresult.xml  activity_recyclerview_header_footer.xml  activity_scroll.xml  activity_scrollview_recyclerview.xml  activity_scrollview_webview.xml  activity_speech.xml  activity_surfaceview_camera.xml  activity_task_one.xml  activity_test_layout.xml  activity_textureview_camera.xml  activity_video_audio_process.xml  activity_videoview_mediacontrol.xml  common_fragment.xml  fragment_layout.xml  fragmnet_recycler_layout.xml  header_layout.xml  item_footer_layout.xml  item_header_layout.xml  item_list_layout.xml  item_simple.xml  moon_mar_activity.xml  my_fragment.xml  my_layout.xml  surfaceview_layout.xml  (+2 more)
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+97 files in other folders)
